# MalariaDetectionChallenge

./: README.md  posprocess_config.yaml  postprocess.py  pyproject.toml  requirements.txt  train_and_infer.py
config_files/detr_train_config_files/: detr_config.yaml
config_files/yolo_train_config_files/: yolo11m_config.yaml
inference/: inference_neg_model.py  tta.py
inference/detr/: inference_detr_models.py
inference/detr/core/: constants.py  model.py  train.py  transforms.py  utils.py
inference/yolo/: inference_yolo_models.py
parameters/postprocessing_config_files/: base_pp.yaml  class_specific_sweep.yaml  distinctive_sweep_169.yaml  stelar_sweep_2146.yaml  sweep.yaml  twilight_152.yaml  vocal_sweep_53.yaml
parameters/postprocessing_config_files/DETR_postprocessing/: DETR_pp.yaml
parameters/postprocessing_config_files/yolo_postprocessing/: yolo_pp.yaml  yolo_pp2.yaml
postprocessing/: postprocess_functions.py  tta_postprocessor.py
preprocessing/: dataset_yolo_format.py  filter_boxes.py
training/: train_neg_model.py
training/detr/: train_detr_models.py
training/detr/core/: infer.py  soap.py  train.py  utils.py
training/detr/core/datasets/: detr_dataset.py
training/yolo/: train_yolo_models.py
util/: ensemble.py  nms.py  random_nms.py  save.py  yaml_structuring.py
