[project]
name = "lacunamalaria"
version = "0.1.0"
description = "Epoch. Lacuna Malaria competition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-image>=0.22.0",
    "scipy>=1.11.4",
    "tqdm>=4.66.5",
    "polars>=0.19.19",
    "torchvision>=0.20.1",
    "torch>=2.4.0",
    "albumentations>=1.4.14",
    "jupyter>=1.1.1",
    "einops>=0.8.0",
    "ema-pytorch>=0.7.3",
    "kornia>=0.7.4",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "transformers>=4.46.2",
    "ultralytics>=8.3.23",
    "wandb>=0.18.5",
]
[tool.mypy]
exclude = ["venv/", ".cache"]
allow_untyped_calls = true
disable_error_code = ["import-untyped"]
python-version = "3.10"
